--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,13 @@
 {
   "name": "crisma-scenario-list-widget-wirecloud",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "dependencies": {
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "crisma-scenario-list-widget-angular": "0.2.0",
-    "crisma-widget-shares": "~0.1.0"
+    "angular": "1.2.25",
+    "json3": "3.2.6",
+    "es5-shim": "2.1.0",
+    "crisma-scenario-list-widget-angular": "1.1.2",
+    "angular-commons": "0.2.0",
+    "icmm_js": "0.1.5"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "es5-shim": "~2.1.0",
-    "angular": "1.2.7",
-    "crisma-scenario-list-widget-angular": "0.2.0"
-  }
+  "devDependencies": {}
 }
