--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,5 +3,8 @@ file.reference.scenario-list-widget-wirecloud-app=app
 file.reference.scenario-list-widget-wirecloud-config=.
 file.reference.scenario-list-widget-wirecloud-test=test
 files.encoding=UTF-8
+grunt.action.build=build
+grunt.action.clean=clean
+grunt.action.rebuild=clean build
 site.root.folder=${file.reference.scenario-list-widget-wirecloud-app}
 test.folder=${file.reference.scenario-list-widget-wirecloud-test}
