[issue #1] ci compliant build

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=${file.reference.scenario-list-widget-wirecloud-config}
 file.reference.scenario-list-widget-wirecloud-app=app
 file.reference.scenario-list-widget-wirecloud-config=.
@@ -7,4 +9,6 @@ grunt.action.build=build
 grunt.action.clean=clean
 grunt.action.rebuild=clean build
 site.root.folder=${file.reference.scenario-list-widget-wirecloud-app}
+start.file=index.html
 test.folder=${file.reference.scenario-list-widget-wirecloud-test}
+web.context.root=/scenario-list-widget-wirecloud
