--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules
-dist
+/nbproject/private/
+dist/*
+!dist/images
+!dist/scripts
+!dist/styles
 .tmp
 .sass-cache
 app/bower_components
-nbproject/private
 .idea
-*.wgt
+target
+.checkDependencies
+test-results.xml
