--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "1.2.25",
+    "angular-resource": "1.2.25",
     "json3": "3.2.6",
     "es5-shim": "2.1.0",
     "crisma-scenario-list-widget-angular": "1.1.2",
     "angular-commons": "0.2.0",
-    "icmm_js": "0.1.5"
+    "icmm_js": "0.1.5",
+    "jquery": "2.1.1",
+    "cids-node-list-widget": "0.1.3"
   },
   "devDependencies": {}
 }
